--- a/Cluster-RCT_binary data.Rmd
+++ b/Cluster-RCT_binary data.Rmd
@@ -23,7 +23,7 @@ You can input your data either use import dataset below "Enviroment" or use the 
 Remember: Please format your data file the same as the example data set!
 
 ```{r}
-data <- read_csv(file = "./data/data_clustered_continuous.csv")
+data <- read_csv(file = "./data/data_clustered_binary.csv")
 ```
 
 # Decide the intracluster correlation coefficient
@@ -61,49 +61,29 @@ data <-
 ```{r}
 data <-
   data %>%
-  mutate(n_effective = n_group/DE) %>%
-  mutate(n_effective = round(n_effective, digits = 0))
-```
-
-
-# Calculating a correlation coefficient
-
-In this example, we will use corr = 0.5
-```{r}
-corr <- 0.5
-```
-
-
-# Calculate change and SD
-
-```{r}
-data <- data %>%
-  mutate(change = mean2 - mean1,
-         change_sd = sqrt(sd1^2 + sd2^2 - 2*corr*sd1*sd2)) %>%
-  mutate(change_sd = round(change_sd, digits = 2))
+  mutate(n1 = n1/DE, n0 = n0/DE) %>%
+  mutate(n1 = round(n1, digits = 0),
+         n0 = round(n0, digits = 0))
 ```
 
 # Finalize the dataset
 
 ```{r}
-data_final_continuous <- data %>%
-  select(id, treatment, n_effective, change, change_sd) %>%
-  mutate(n1 = if_else(treatment == 1, n_effective, 0),
-         mean1 = if_else(treatment == 1, change, 0),
-         sd1 = if_else(treatment == 1, change_sd, 0),
-         n2 = if_else(treatment == 0, n_effective, 0),
-         mean2 = if_else(treatment == 0, change, 0),
-         sd2 = if_else(treatment == 0, change_sd, 0)) %>%
+data_final_binary <- data %>%
+  select(id, treatment, n1, n0) %>%
+  mutate(n11 = if_else(treatment == 1, n1, 0),
+         n12 = if_else(treatment == 1, n0, 0),
+         n21 = if_else(treatment == 0, n1, 0),
+         n22 = if_else(treatment == 0, n0, 0)) %>%
   group_by(id) %>%
-  mutate(n2 = sum(n2),
-         mean2 = sum(mean2),
-         sd2 = sum(sd2)) %>%
+  mutate(n21 = sum(n21),
+         n22 = sum(n22)) %>%
   filter(treatment == 1) %>%
-  select(-treatment, -n_effective, -change, -change_sd)
+  select(-treatment, -n1, -n0)
 ```
 
 
 ```{r}
-write_xlsx(data_final, path = "./data/data_final_continuous.xlsx")
+write_xlsx(data_final_binary, path = "./data/data_final_binary.xlsx")
 ```
 
